# CpGPT

./: .gitignore  README.md  pyproject.toml
configs/data/: default.yaml
configs/model/net/: large.yaml  small.yaml
configs/model/training/: default.yaml
cpgpt/: __init__.py  downloads.py
cpgpt/data/: cpgpt_datamodule.py
cpgpt/data/components/: cpgpt_dataset.py  dna_llm_embedder.py
cpgpt/infer/: cpgpt_inferencer.py
cpgpt/model/: __init__.py  cpgpt_module.py  cpgpt_module_mortality.py  utils.py
cpgpt/model/components/: model.py
tutorials/: attend.ipynb  convert_array.ipynb  denoise.ipynb  finetune.ipynb  generate.ipynb  impute.ipynb  predict_mortality.ipynb  quick_setup copy.ipynb  quick_setup.ipynb  reference_map.ipynb
